[gd_scene load_steps=22 format=3 uid="uid://28umbtrxx3b7"]

[ext_resource type="Script" path="res://scripts/level1/entities/player/root/player.gd" id="1_0dvx4"]
[ext_resource type="Resource" uid="uid://b2q2u3lcy8o4n" path="res://assets/resources/entitiesStats/player/root/playerStats.tres" id="2_nvrre"]
[ext_resource type="Texture2D" uid="uid://by82hacd2hb4g" path="res://assets/images/gameManager/entities/player/root/player.png" id="3_jnvsi"]
[ext_resource type="Script" path="res://scripts/level1/components/health/root/healthComponent.gd" id="4_ge7tc"]
[ext_resource type="Script" path="res://scripts/level1/components/hitbox/root/hitboxComponent.gd" id="5_bdv7d"]
[ext_resource type="Script" path="res://scripts/level1/entities/player/camera/root/camera.gd" id="6_nt6iv"]
[ext_resource type="PackedScene" uid="uid://b3exsrvf730c2" path="res://scenes/level1/entities/player/sword/root/sword.tscn" id="7_6gv83"]
[ext_resource type="PackedScene" uid="uid://bj77v4tfok35s" path="res://scenes/level1/entities/player/shuriken/root/shuriken.tscn" id="8_08led"]
[ext_resource type="Script" path="res://scripts/level1/entities/player/hud/healthUI/root/healthUI.gd" id="8_l1qkv"]
[ext_resource type="Script" path="res://scripts/level1/entities/player/hud/pointsUI/root/pointsUI.gd" id="9_ak4hg"]
[ext_resource type="AudioStream" uid="uid://dyaauronc7p15" path="res://assets/audio/entities/player/hit/root/hitAudio.wav" id="10_ehnm2"]

[sub_resource type="Animation" id="Animation_w2uf3"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_upprb"]
resource_name = "damaged"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.3, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [false, true, false, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_6tsk5"]
_data = {
"RESET": SubResource("Animation_w2uf3"),
"damaged": SubResource("Animation_upprb")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gi6pw"]
size = Vector2(16, 20)

[sub_resource type="Animation" id="Animation_cu8i0"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.5, 0.5)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.839216, 0.831373, 0.796078, 1)]
}

[sub_resource type="Animation" id="Animation_4uejm"]
resource_name = "updateHealth"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0.5, 0.5), Vector2(1, 1), Vector2(0.5, 0.5)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0.0627451, 0.0745098, 0.137255, 1), Color(0.839216, 0.831373, 0.796078, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_rseof"]
_data = {
"RESET": SubResource("Animation_cu8i0"),
"updateHealth": SubResource("Animation_4uejm")
}

[sub_resource type="Animation" id="Animation_ndp8y"]
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.839216, 0.831373, 0.796078, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.5, 0.5)]
}

[sub_resource type="Animation" id="Animation_bq883"]
resource_name = "updateHealth"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0.5, 0.5), Vector2(1, 1), Vector2(0.5, 0.5)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0.0627451, 0.0745098, 0.137255, 1), Color(0.839216, 0.831373, 0.796078, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_86bpe"]
_data = {
"RESET": SubResource("Animation_ndp8y"),
"updatePoints": SubResource("Animation_bq883")
}

[node name="player" type="CharacterBody2D" groups=["player"]]
z_index = 2
collision_mask = 2
script = ExtResource("1_0dvx4")
stats = ExtResource("2_nvrre")

[node name="sprite" type="Sprite2D" parent="."]
texture = ExtResource("3_jnvsi")

[node name="anim" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_6tsk5")
}

[node name="health" type="Node2D" parent="."]
script = ExtResource("4_ge7tc")

[node name="hitbox" type="Area2D" parent="." node_paths=PackedStringArray("health")]
script = ExtResource("5_bdv7d")
health = NodePath("../health")

[node name="col" type="CollisionShape2D" parent="hitbox"]
position = Vector2(0, 1)
shape = SubResource("RectangleShape2D_gi6pw")

[node name="camera" type="Camera2D" parent="."]
zoom = Vector2(0.5, 0.5)
position_smoothing_speed = 20.0
script = ExtResource("6_nt6iv")

[node name="col" type="CollisionShape2D" parent="."]
position = Vector2(0, 1)
shape = SubResource("RectangleShape2D_gi6pw")

[node name="sword" parent="." instance=ExtResource("7_6gv83")]
position = Vector2(0, 2)

[node name="shuriken" parent="." instance=ExtResource("8_08led")]

[node name="hud" type="CanvasLayer" parent="."]

[node name="healthUI" type="RichTextLabel" parent="hud"]
modulate = Color(0.839216, 0.831373, 0.796078, 1)
anchors_preset = -1
anchor_left = 0.01
anchor_top = 0.01
anchor_right = 0.01
anchor_bottom = 0.01
offset_right = 40.0
offset_bottom = 24.0
scale = Vector2(0.5, 0.5)
pivot_offset = Vector2(20, 12)
bbcode_enabled = true
text = "[center]a"
script = ExtResource("8_l1qkv")

[node name="healthUpdateAnim" type="AnimationPlayer" parent="hud/healthUI"]
libraries = {
"": SubResource("AnimationLibrary_rseof")
}

[node name="pointsUI" type="RichTextLabel" parent="hud"]
modulate = Color(0.839216, 0.831373, 0.796078, 1)
anchors_preset = -1
anchor_left = 0.99
anchor_top = 0.01
anchor_right = 0.99
anchor_bottom = 0.01
offset_left = -40.0
offset_bottom = 24.0
grow_horizontal = 0
scale = Vector2(0.5, 0.5)
pivot_offset = Vector2(20, 12)
bbcode_enabled = true
text = "[center]a"
script = ExtResource("9_ak4hg")

[node name="pointsUpdateAnim" type="AnimationPlayer" parent="hud/pointsUI"]
libraries = {
"": SubResource("AnimationLibrary_86bpe")
}

[node name="hitAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("10_ehnm2")

[connection signal="attackFinished" from="." to="." method="_on_attack_finished"]
[connection signal="attackStarted" from="." to="." method="_on_attack_started"]
[connection signal="dmg" from="." to="." method="_on_dmg"]
[connection signal="pointsUpdated" from="." to="hud/pointsUI" method="_on_player_points_updated"]
[connection signal="animation_finished" from="anim" to="." method="_on_anim_animation_finished"]
[connection signal="healthUpdated" from="health" to="." method="_on_health_health_updated"]
